<resources>
    <string name="app_name">Restaurant Admin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="details">Menu details</string>
    <string name="menu_title">Menu Tittle</string>
    <string name="menu_price">Menu Price</string>
    <string name="distance">Restaurant Distance</string>
    <string name="calories">200 cal</string>
    <string name="location">3 miles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">home</string>
    <string name="title_dashboard">Restaurants</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_admin">Admin</string>
    <string name="title_restaurants">Restaurants</string>
    <string name="title_menu">Menu</string>

</resources>
