<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="c.adricals.restaurantadmin.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="c.adricals.restaurantadmin.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_admin"
        android:name="c.adricals.restaurantadmin.ui.admin.UserFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/content_main"


        />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="c.adricals.restaurantadmin.ui.restaurant.RestaurantFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/menuFragment"
        android:name="c.adricals.restaurantadmin.ui.restaurant.MenuFragment"
        android:label="MenuFragment" />
    <fragment
        android:id="@+id/addMenuFragment"
        android:name="c.adricals.restaurantadmin.ui.restaurant.AddMenuFragment"
        android:label="AddMenuFragment" />
</navigation>