<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="4dp"
    app:cardElevation="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_restaurant_black_24dp"
            android:padding="16dp"
            android:layout_margin="8dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">


            <TextView
                android:id="@+id/menu_tittle_view"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textStyle="bold"
                android:text="@string/menu_title" />

            <TextView
                android:id="@+id/details_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/price_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/menu_price" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/location" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:padding="2dp"
                android:src="@drawable/bacgroundlogo"/>

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>